--- a/style.css
+++ b/style.css
@@ -27,14 +27,8 @@
     width: 100%;
 }
 
-.custom-margin-y {
-    margin-top: 4.5rem;
-    margin-bottom: 0.5rem;
-}
-
-.custom-margin-x {
-    margin-left: 6rem;
-    margin-right: 6rem;
+.btn {
+    margin: 4.5rem 6rem 0.5rem;
 }
 
 .id-display {
@@ -60,14 +54,7 @@
     .btn {
         padding: 15px 24px;
         font-size: 20px;
-    }
-    .custom-margin-y {
-        margin-top: 1.5rem;
-        margin-bottom: 0.5rem;
-    }
-    .custom-margin-x {
-        margin-left: 1.5rem;
-        margin-right: 1.5rem;
+        margin: 1.5rem;
     }
     .id-display {
         font-size: 20px;
