--- a/style.css
+++ b/style.css
@@ -21,14 +21,24 @@
 }
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    gap: 2rem;
+    margin: 100px auto 0 auto;
+}
+
+#buttonContainerTop {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+#buttonContainerRest {
+    margin-bottom: 3rem;
 }
 
 .btn {
-    margin: 4.5rem 6rem 0.5rem;
+    padding: 20px 40px;
+    margin: 1rem 1rem 0.5rem;
 }
 
 .id-display {
@@ -42,6 +52,19 @@
     z-index: 1000;
     font-size: 16px;
     color: #333;
+}
+
+.instructions {
+    text-align: left;
+    font-size: 1.5rem;
+    margin-left: 50px;
+}
+
+.contact-info {
+    padding: 20px;
+    background-color: #f8f9fa;
+    text-align: center;
+    border-top: 1px solid #ccc;
 }
 
 @media (max-width: 768px) {
