--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 .instructions {
     text-align: left;
     font-size: 1.5rem;
-    margin-left: 50px;
+    margin-left: 1rem;
 }
 
 .contact-info {
