Banner image update

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .header-banner {
-    background: url('img/header-banner.jpg') no-repeat center center;
+    background: url('img/header-banner.webp') no-repeat center center;
     background-size: cover;
     color: white;
     height: 300px;
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
 }
 
 .organization-name, .site-content, .research-title {
