--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@
     color: #333;
 }
 
-.instructions {
+.instructions, .consent {
     text-align: left;
-    font-size: 1.5rem;
-    margin-left: 1rem;
+    font-size: 1.3rem;
+    margin-left: 1.5rem;
 }
 
 .contact-info {
